# ros_control_minimal_example

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: my_robot_controllers.yaml
launch/: my_robot.rviz  my_robot_hw.launch
src/: my_robot.cpp
urdf/: my_robot.urdf
